[gd_scene load_steps=7 format=2]

[ext_resource path="res://greenslime.png" type="Texture" id=1]
[ext_resource path="res://Agent.gd" type="Script" id=2]
[ext_resource path="res://Genome.gd" type="Script" id=3]
[ext_resource path="res://Brain.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 54 )

[node name="Agent" type="KinematicBody2D" groups=["Agent"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="icon" type="Sprite" parent="Sprite"]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Genome" type="Node2D" parent="."]
position = Vector2( 8, 40 )
script = ExtResource( 3 )

[node name="Brain" type="Node2D" parent="."]
position = Vector2( -8, 40 )
script = ExtResource( 4 )

[node name="FoodUseTimer" type="Timer" parent="."]
one_shot = true

[node name="TouchSensor_N" type="Area2D" parent="."]

[node name="shape" type="CollisionPolygon2D" parent="TouchSensor_N"]
polygon = PoolVector2Array( 0, -32, -20, -24, 0, -24, 20, -24 )

[node name="TouchSensor_E" type="Area2D" parent="."]

[node name="shape" type="CollisionPolygon2D" parent="TouchSensor_E"]
polygon = PoolVector2Array( 24, -20, 32, 0, 24, 20, 24, 0 )

[node name="TouchSensor_S" type="Area2D" parent="."]

[node name="shape" type="CollisionPolygon2D" parent="TouchSensor_S"]
polygon = PoolVector2Array( 0, 32, 20, 24, 0, 24, -20, 24 )

[node name="TouchSensor_W" type="Area2D" parent="."]

[node name="shape" type="CollisionPolygon2D" parent="TouchSensor_W"]
polygon = PoolVector2Array( -24, -20, -32, 0, -24, 20, -24, 0 )

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
position = Vector2( 0, -90 )
shape = SubResource( 3 )

[node name="P_left" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="P_left"]
position = Vector2( -24, -256 )
polygon = PoolVector2Array( 8, 112, -72, 128, 0, 232, 8, 224 )

[node name="P_right" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="P_right"]
position = Vector2( 40, -186.494 )
scale = Vector2( 1, 0.794118 )
polygon = PoolVector2Array( -24, 53.511, 56, 73.6592, -16, 204.622, -24, 194.548 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.5, 0.6 )

[node name="mouse_click_region" type="TextureButton" parent="."]
margin_left = -72.0
margin_top = -72.0
margin_right = 72.0
margin_bottom = 72.0

[node name="debugVisionCones" type="Node2D" parent="."]

[node name="PL" type="Polygon2D" parent="debugVisionCones"]
position = Vector2( -328, -41.4118 )
scale = Vector2( 0.852, 0.470588 )
color = Color( 0, 0, 0, 0.0980392 )
offset = Vector2( 384.977, 104 )
polygon = PoolVector2Array( -112.676, -288, -18.7798, -322, -18.7798, -83.9999, -28.1695, -66.9999 )

[node name="PR" type="Polygon2D" parent="debugVisionCones"]
position = Vector2( 0, 7.52942 )
scale = Vector2( 1, 0.470588 )
color = Color( 0, 0, 0, 0.0980392 )
polygon = PoolVector2Array( 16, -322, 16, -84.0001, 24, -67, 96, -288 )

[node name="Center" type="Polygon2D" parent="debugVisionCones"]
position = Vector2( -9.53674e-07, -26.1818 )
scale = Vector2( 0.5, 0.409091 )
color = Color( 0, 0, 0, 0.0980392 )
polygon = PoolVector2Array( -32, -288, -32, -24, 32, -24, 32, -288 )

[node name="Touch_N" type="Polygon2D" parent="debugVisionCones"]
position = Vector2( 0, 32 )
color = Color( 0, 0, 0, 0.0980392 )
polygon = PoolVector2Array( 0, -48, -20, -56, 0, -64, 20, -56 )

[node name="Touch_E" type="Polygon2D" parent="debugVisionCones"]
position = Vector2( 24, 16 )
color = Color( 0, 0, 0, 0.0980392 )
polygon = PoolVector2Array( 0, -36, -8, -16, 0, 4, 8, -16 )

[node name="Touch_S" type="Polygon2D" parent="debugVisionCones"]
position = Vector2( 0, 48 )
color = Color( 0, 0, 0, 0.0980392 )
polygon = PoolVector2Array( 0, -32, -20, -24, 0, -16, 20, -24 )

[node name="Touch_W" type="Polygon2D" parent="debugVisionCones"]
position = Vector2( -48, 0 )
color = Color( 0, 0, 0, 0.0980392 )
polygon = PoolVector2Array( 16, 0, 24, 20, 32, 0, 24, -20 )

[node name="debugBrainVis" type="Node2D" parent="."]

[node name="Label" type="Label" parent="debugBrainVis"]
margin_left = -48.0
margin_top = 32.0
margin_right = 48.0
margin_bottom = 56.0
text = "110011110011
111010101010"
align = 1
valign = 1

[node name="DangerSpike" type="Area2D" parent="."]

[node name="SpikeVisual" type="Polygon2D" parent="DangerSpike"]
color = Color( 0.184314, 0.619608, 0.262745, 1 )
polygon = PoolVector2Array( -4, -20, 0, -64, 4, -20 )

[node name="SpikeArea" type="CollisionPolygon2D" parent="DangerSpike"]
position = Vector2( 0, 20 )
polygon = PoolVector2Array( 0, -84, -1, -76, 1, -76 )

[connection signal="timeout" from="FoodUseTimer" to="." method="_on_FoodUseTimer_timeout"]
[connection signal="body_entered" from="TouchSensor_N" to="." method="_on_TouchSensor_N_body_entered"]
[connection signal="body_exited" from="TouchSensor_N" to="." method="_on_TouchSensor_N_body_exited"]
[connection signal="body_entered" from="TouchSensor_E" to="." method="_on_TouchSensor_E_body_entered"]
[connection signal="body_exited" from="TouchSensor_E" to="." method="_on_TouchSensor_E_body_exited"]
[connection signal="body_entered" from="TouchSensor_S" to="." method="_on_TouchSensor_S_body_entered"]
[connection signal="body_exited" from="TouchSensor_S" to="." method="_on_TouchSensor_S_body_exited"]
[connection signal="body_entered" from="TouchSensor_W" to="." method="_on_TouchSensor_W_body_entered"]
[connection signal="body_exited" from="TouchSensor_W" to="." method="_on_TouchSensor_W_body_exited"]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="body_entered" from="P_left" to="." method="_on_P_left_body_entered"]
[connection signal="body_exited" from="P_left" to="." method="_on_P_left_body_exited"]
[connection signal="body_entered" from="P_right" to="." method="_on_P_right_body_entered"]
[connection signal="body_exited" from="P_right" to="." method="_on_P_right_body_exited"]
[connection signal="mouse_entered" from="mouse_click_region" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="mouse_click_region" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="mouse_click_region" to="." method="_on_TextureButton_pressed"]
[connection signal="body_entered" from="DangerSpike" to="." method="_on_DangerSpike_body_entered"]
